# tsto2rgb

./: .gitignore  README.md  pyproject.toml
src/tsto2rgb/: bcell.py  bsv.py  convert.py  misc.py  progress.py  rgb.py
src/tsto2rgb/parsers/: __init__.py  bcell.py  bsv.py  rgb.py  styles.py
src/tsto2rgb/parsers/dicer/: linux
src/tsto2rgb/tools/: __init__.py  convert.py  misc.py  progress.py  styles.py
