[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsto2rgb"
version = "0.0.9"
authors = [
  { name="al1sant0s", email="cnctalissonsantos@gmail.com" },
]
description = "Convert images back to rgb files for The 'Simpsons: Tapped Out'."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "wand", "natsort"]

[project.scripts]
tsto2rgb = "tsto2rgb.tools.convert:main"

[project.urls]
Homepage = "https://github.com/al1sant0s/tsto2rgb"
Issues = "https://github.com/al1sant0s/tsto2rgb/issues"
